# socket-wake

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE  README.md  live_mic_detect.py  target.txt
.github/workflows/: ci.yml
docs/: training.md
docs/superpowers/plans/: 2026-07-03-socket-wake-impl.md
models/hey-socket-v1/: checkpoint.pt  header.h  train.py  train_data.npz
python/: pyproject.toml
python/socket_wake/: dump_streams.py  eval_v3.py  export.py  gen_mel_ref.py  int8_ref.py  score_streams.py  synthesize.py  train.py  train_v3.py
python/socket_wake.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/socket_wake/data/: augment.py  build_v2_dataset.py  build_v3_dataset.py  fetch_musan.py  loader.py  snr_mix.py  synthetic.py  tts_dataset.py
python/socket_wake/features/: mel.py
python/socket_wake/model/: ds_cnn.py  kws_cnn.py
python/tests/: test_data.py  test_export.py  test_features.py  test_model.py
runtime/: Cargo.toml
runtime/c/: socket_wake.h
runtime/esp_idf/: README.md
runtime/examples/: stream_check.rs
runtime/src/: arena.rs  cnn.rs  lib.rs  mel.rs  state.rs  weights.rs
runtime/tests/: canned_model_test.rs  detector_test.rs  mel_parity_test.rs  mel_test.rs  memory_profile_test.rs  parity_test.rs  state_test.rs  weights_test.rs
