[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "socket-wake"
version = "0.1.0"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7"]
train = ["torch>=2.1", "torchaudio>=2.1"]

[tool.setuptools.packages.find]
where = ["."]