[package]
name = "socket-wake-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["rlib", "staticlib"]

[features]
default = ["std"]
std = []

[dependencies]
libm = { version = "0.2", default-features = false }
microfft = { version = "0.6", default-features = false, features = ["size-512"] }
